--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=9080
 server.servlet.context-path=/dictionary_search
+spring.servlet.multipart.max-request-size=1000MB
+spring.servlet.multipart.max-file-size=1000MB
